# stocky-rust

./: .env  .gitignore  Cargo.toml  docker-compose.yml  index.html
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs  user_info.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231017_030401_user_info.rs
redis-stack/: redis-stack.conf
src/: main.rs
src/common/: custom_error.rs  jwt.rs  mod.rs  redisutils.rs  response.rs  utils.rs
src/entity/: admin.rs  admin_access.rs  device.rs  sea_orm_active_enums.rs  system_access.rs  user_credential.rs  user_login.rs  user_profile.rs  user_report.rs  user_verification.rs
src/models/: auth.rs  user.rs
src/repositories/: auth.rs  user.rs
src/request_filter/: jwt_middleware.rs
src/routes/: auth.rs  index.rs  user.rs
src/server_sent_event/: sse_emitter.rs
