[package]
name = "learn-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","migration","entity"]

[dependencies]
actix-web = "4"
serde = {version = "1.0",features = ["derive"]}
dotenv = "0.15.0"
tokio = {version = "1.33.0",features = ["macros","rt-multi-thread"]}
chrono = "0.4.31"
entity = {path = "entity"}
migration = {path = "migration"}
uuid ={ version = "1.4.1",features = ["v4","fast-rng","macro-diagnostics"]}
validator = { version = "0.12", features = ["derive"] }


[dependencies.sea-orm]
version = "0.12.3"
features = ["sqlx-postgres","runtime-tokio-rustls","macros"]
default-features = false
