[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "0.12.3",features = ["runtime-tokio-rustls","sqlx-postgres"]}
serde = { version = "1.0.189", features = ["derive"] }
